<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".view.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_ll_std">

        <!-- Logo -->
        <ImageView
            android:layout_width="250sp"
            android:layout_height="250sp"
            android:layout_marginTop="-20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_viajes_log" />

        <!-- Campo de correo -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_touch_min"
            android:background="@color/white"
            android:textColorHint="@color/black">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/touch_min"
                android:layout_margin="@dimen/margin_touch_min"
                android:autofillHints="true"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/padding_ll_std"
                android:drawableTint="@color/black"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="@dimen/font_medium" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Campo de contraseña -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_touch_min"
            android:background="@color/white"
            android:textColorHint="@color/black"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/touch_min"
                android:layout_margin="@dimen/margin_touch_min"
                android:autofillHints="true"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="@dimen/padding_ll_std"
                android:drawableTint="@color/black"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:textSize="@dimen/font_medium" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Mensajes de Error -->
        <TextView
            android:id="@+id/tv_alert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_touch_min"
            android:layout_marginEnd="@dimen/margin_touch_min"
            android:gravity="center"
            android:text="@string/wrong"
            android:textColor="@color/red"
            android:textSize="@dimen/font_std"
            android:textStyle="bold"
            android:visibility="invisible" />

        <!-- Barra de Carga -->
        <ProgressBar
            android:id="@+id/pb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <!-- Botón de inicio de sesión -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_btn"
            android:layout_margin="@dimen/margin_touch_min"
            android:background="@drawable/bt_rounded_corner"
            android:paddingBottom="5dp"
            android:text="@string/login"
            android:textSize="@dimen/font_std"
            android:textStyle="bold" />

        <!-- Botón de reestablecer contraseña -->
        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_min"
            android:layout_margin="@dimen/margin_touch_min"
            android:gravity="center"
            android:text="@string/forgot"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium" />


        <!-- Botón de inicio con Google -->
        <ProgressBar
            android:id="@+id/pb_login_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/btn_login_google"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_btn"
            android:layout_margin="8sp"
            android:background="@drawable/bt_rounded_corner"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/touch_btn"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="-15sp"
                android:contentDescription="@string/google"
                android:padding="@dimen/padding_touch_min"
                android:paddingBottom="5dp"
                android:src="@drawable/ic_login_google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/touch_min"
                android:backgroundTint="@color/gray"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="@string/login_google"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/font_std"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Botón de registro -->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_btn"
            android:layout_margin="@dimen/margin_touch_min"
            android:background="@drawable/bt_rounded_corner"
            android:text="@string/signup"
            android:textSize="@dimen/font_std"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>